# godot-meta-toolkit

./: .gitignore  .gitmodules  CHANGES.md  LICENSE.txt  README.md  SConstruct  THIRD_PARTY_NOTICES.txt  build.gradle  config.gradle  generate_platform_sdk_bindings.py  settings.gradle
demo/: README.md  export_presets.cfg  local.gd.uid  main.gd  main.gd.uid  main.tscn  openxr_action_map.tres  panel_switcher.gd  panel_switcher.gd.uid  panel_switcher_layer.gd.uid  project.godot  raycast.gd.uid
doc_classes/: MetaPlatformSDK.xml  MetaPlatformSDK_AbuseReportOptions.xml  MetaPlatformSDK_AbuseReportRecording.xml  MetaPlatformSDK_AchievementDefinition.xml  MetaPlatformSDK_AchievementDefinitionArray.xml  MetaPlatformSDK_AchievementProgress.xml  MetaPlatformSDK_AchievementProgressArray.xml  MetaPlatformSDK_AchievementUpdate.xml  MetaPlatformSDK_AdvancedAbuseReportOptions.xml  MetaPlatformSDK_AppDownloadProgressResult.xml  MetaPlatformSDK_AppDownloadResult.xml  MetaPlatformSDK_ApplicationInvite.xml  MetaPlatformSDK_ApplicationInviteArray.xml  MetaPlatformSDK_ApplicationOptions.xml  (+103 more)
toolkit/: .gitignore  CMakeLists.txt  build.gradle  common.cmake
toolkit/src/main/: AndroidManifest.xml
toolkit/src/main/cpp/: register_types.cpp
toolkit/src/main/cpp/editor/: meta_export_template_dialog.cpp  meta_project_setup_dialog.cpp  meta_toolkit_editor_plugin.cpp  meta_xr_simulator_dialog.cpp
toolkit/src/main/cpp/export/: meta_toolkit_export_plugin.cpp
toolkit/src/main/cpp/include/: register_types.h  util.h  version.h
toolkit/src/main/cpp/include/editor/: meta_export_template_dialog.h  meta_project_setup_dialog.h  meta_toolkit_editor_plugin.h  meta_xr_simulator_dialog.h
toolkit/src/main/cpp/include/export/: meta_toolkit_export_plugin.h
toolkit/src/main/cpp/include/platform_sdk/: meta_platform_sdk_request.h
toolkit/src/main/cpp/include/raw_headers/: mr_startup.tscn
toolkit/src/main/cpp/platform_sdk/: meta_platform_sdk.cpp  meta_platform_sdk_request.cpp
toolkit/src/main/java/com/meta/w4/godot/toolkit/: GodotMetaToolkit.kt  GodotPanelApp.kt
(+24 files in other folders)
